--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL =mongodb+srv://Rithick:Rithickg567@cluster0.9qa8x.mongodb.net/bill_system?retryWrites=true&w=majority
 PORT=2002
+TOKEN_SECRET=Rithickg567
