--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.5",
         "nodemon": "^2.0.19"
     }
